--- a/frontend/registration/sign_up.html
+++ b/frontend/registration/sign_up.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UMT - Create Account</title>
-    {% include 'tracker/header.html' %}
-</head>
-<body>
-    {% include 'accounts/global_links.html' %}
-    <h1><strong>Create your account!</strong></h1>
-    
-    {% if form.errors %}
-        <div style="color: rgb(255, 0, 0); background-color: #ffebee; padding: 10px; border: 1px solid red; margin: 10px 0;">
-            <strong>Please correct the following errors:</strong>
-            {{ form.errors }}
-        </div>
-    {% endif %}
-    
-    <form action="" method="POST">
-        <fieldset style="width: max-content;">
-            {% csrf_token %}
-            <table class='form'>
-                {{ form.as_table }}
-            </table>
-            <button type="submit" class="btn btn-secondary"><strong>Create Account</strong></button>
-        </fieldset>
-    </form>
-</body>
+    <link rel="stylesheet" href="http://127.0.0.1:8080/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="container">
+        <ul>
+          <li><a href="/accounts/home/">Home</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
+      <h1><strong>Create your account!</strong></h1>
+
+      <div id="error-message" class="error" style="display: none"></div>
+
+      <form id="signup-form">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="password1">Password:</label>
+        <input type="password" id="password1" name="password1" required />
+
+        <label for="password2">Confirm Password:</label>
+        <input type="password" id="password2" name="password2" required />
+
+        <button type="submit">Create Account</button>
+      </form>
+    </div>
+    <script src="http://127.0.0.1:8080/dist/registration/sign_up.js"></script>
+  </body>
 </html>
