--- a/frontend/accounts/change_password.html
+++ b/frontend/accounts/change_password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UMT - Media List</title>
+    <title>UMT - Change Password</title>
     <link rel="stylesheet" href="http://127.0.0.1:8080/styles.css" />
   </head>
   <body>
@@ -20,25 +20,29 @@
       </nav>
     </header>
     <div class="container">
-      <h1 id="user-title">My Tracked Media</h1>
+      <h1>Change Password</h1>
+
       <div id="error-message" class="error" style="display: none"></div>
-      <table id="media-table">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Status</th>
-            <th>Rating</th>
-            <th>Type</th>
-            <th>Description</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="media-tbody">
-          <!-- Data will be loaded here -->
-        </tbody>
-      </table>
-      <button id="add-media-btn">Add Media</button>
+      <div id="success-message" style="color: green; display: none"></div>
+
+      <form id="change-password-form">
+        <label for="old_password">Old Password:</label>
+        <input type="password" id="old_password" name="old_password" required />
+
+        <label for="new_password">New Password:</label>
+        <input type="password" id="new_password" name="new_password" required />
+
+        <label for="confirm_new_password">Confirm New Password:</label>
+        <input
+          type="password"
+          id="confirm_new_password"
+          name="confirm_new_password"
+          required
+        />
+
+        <button type="submit">Change Password</button>
+      </form>
     </div>
-    <script src="http://127.0.0.1:8080/dist/tracker/media_list.js"></script>
+    <script src="http://127.0.0.1:8080/dist/accounts/change_password.js"></script>
   </body>
 </html>
