--- a/frontend/tracker/delete_media.html
+++ b/frontend/tracker/delete_media.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMT - Delete Media</title>
-    {% include 'tracker/header.html' %}
+    <link rel="stylesheet" href="http://127.0.0.1:8080/styles.css">
 </head>
 <body>
-    {% include 'tracker/global_links.html' %}
-    <h1><strong>Are you sure you want to delete "{{ media.title }}"?</strong></h1>
-    <form action="" method="POST">
-        <fieldset style="width: max-content;">
-            {% csrf_token %}
-            <a href="{% url 'tracker:tracker_home' %}" class="btn btn-secondary"><strong>Cancel</strong></a>
-            <span style="margin-left: 50px;"></span>
-            <button type="submit" class="btn btn-danger"><strong>Delete</strong></button>
-        </fieldset>
-    </form>
+    <header>
+        <nav class="container">
+            <ul>
+                <li><a href="/tracker/">Home</a></li>
+                <li><a href="/tracker/add/">Add Media</a></li>
+                <li><a href="/accounts/change_password/">Change Password</a></li>
+                <li><a href="/delete_account/">Delete Account</a></li>
+                <li><a href="/swagger/" target="_blank">API Documentation</a></li>
+                <li><a href="/registration/logout/">Logout</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <h1 id="delete-title">Are you sure you want to delete this media?</h1>
+
+        <div id="error-message" class="error" style="display: none;"></div>
+
+        <button id="cancel-btn">Cancel</button>
+        <button id="delete-btn" style="background: red; color: white;">Delete</button>
+    </div>
+    <script src="http://127.0.0.1:8080/dist/tracker/delete_media.js"></script>
 </body>
 </html>
